--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+# JetBrains IDEs
 .idea/
+
+# Node/npm
+**/node_modules/
+**/package-lock.json
+
+# Custom
 /client/build/
-/client/node_modules/
-/node_modules/
