--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server:start": "cd server && npm start",
     "install": "npm run client:install && npm run server:install",
     "build": "npm run client:build",
-    "start": "npm run install && npm run build && npm run server:start"
+    "postinstall": "npm run install && npm run build",
+    "start": "npm run server:start"
   }
 }
