--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {},
   "scripts": {
+    "client:dev": "cd client && npm start",
     "client:install": "cd client && npm install",
     "client:build": "cd client && npm run build",
     "server:install": "cd server && npm install",
