added dotenv package for easier testing with environment variables

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
     "mysql2": "^1.6.1",
     "serve-favicon": "^2.5.0"
   },
+  "devDependencies": {
+    "dotenv": "^6.2.0"
+  },
   "scripts": {
     "start": "node app.js"
   }
