--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mysql2": "^1.6.1",
     "serve-favicon": "^2.5.0"
   },
