Fixed having to change path names to run the project locally
You can now run "dev:server" and "dev:client" to run the project locally, while not effecting how the project works when deployed to heroku. This includes hot reloading for file changes on the client side, but requires to restart "dev:server" on server side file changes.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "dependencies": {},
   "scripts": {
-    "client:dev": "cd client && npm start",
     "client:install": "cd client && npm install",
     "client:build": "cd client && npm run build",
     "server:install": "cd server && npm install",
@@ -11,6 +10,8 @@
     "install": "npm run client:install && npm run server:install",
     "build": "npm run client:build",
     "heroku-postbuild": "npm run install && npm run build",
+    "dev:server": "npm run server:start",
+    "dev:client": "cd client && npm start",
     "start": "npm run server:start"
   }
 }
