Added "test:unit" script to root package.json and removed part of README.md that referenced where the client tests were, as this is not necessary for a README file

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "heroku-postbuild": "npm run install && npm run build",
     "dev:server": "npm run server:start",
     "dev:client": "cd client && npm start",
+    "test:unit": "cd client && npm test",
     "start": "npm run server:start"
   }
 }
