--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,15 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:behavioral": "cypress open"
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "cypress": "^3.1.5",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "enzyme-to-json": "^3.3.5"
