--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "pollinate",
   "version": "1.0.0",
   "dependencies": {
+    "fuse.js": "^3.4.2",
+    "query-string": "^5.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
