--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "fuse.js": "^3.4.2",
+    "moment": "^2.24.0",
     "query-string": "^5.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
