--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "query-string": "^5.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-markdown": "^4.0.8",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "react-simplemde-editor": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
